--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,6 +29,8 @@
         {% include disqus.html %}
       {% endif %}
       {% include links.html %}
+	  
+  	{% include post.html %}
     </div>
     {% include footer.html %}
   </body>
